--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -49,6 +49,7 @@
     {% if posts %}
         <table class="table table-bordered">
             <colgroup>
+                <col style="width: 30px">
                 <col style="width: 40px">
                 <col style="width: 100px">
                 <col style="width: 60px">
@@ -56,6 +57,7 @@
             </colgroup>
             <thead class="table-light">
                 <tr>
+                    <td>카테고리</td>
                     <td>제목</td>
                     <td>내용</td>
                     <td>작성일</td>
@@ -65,6 +67,9 @@
             <tbody>
                 {% for post in posts %}
                     <tr>
+                        <td>
+                            <a href="{% url 'blog:detail' pk=post.pk %}" class="">{{ post.category }}</a>
+                        </td>
                         <td>
                             <a href="{% url 'blog:detail' pk=post.pk %}" class="">{{ post.title }}</a>
                         </td>
