--- a/blog/templates/blog/post_form.html
+++ b/blog/templates/blog/post_form.html
@@ -4,9 +4,18 @@
     <p>블로그 글 작성 화면</p>
     <!-- 제목 -->
     <!-- 내용 -->
+    <p class="main-desc">내용을 입력 해주세요.</p>
     <form action="{% url 'blog:write' %}" method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" class="btn btn-outline-success">
+        <colgroup>
+            <col style="width: 120px">
+        </colgroup>
+        <tbody>
+            {% csrf_token %}
+            {{ form.as_p }}
+            <input type="submit" class="btn btn-outline-success">
+        </tbody>
     </form>
+    <script>
+        
+    </script>
 {% endblock %}
