--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -49,11 +49,11 @@
     {% if posts %}
         <table class="table table-bordered">
             <colgroup>
-                <col style="width: 30px">
                 <col style="width: 40px">
-                <col style="width: 100px">
-                <col style="width: 60px">
-                <col style="width: 30px">
+                <col style="width: 80px">
+                <col style="width: 120px">
+                <col style="width: 80px">
+                <col style="width: 80px">
             </colgroup>
             <thead class="table-light">
                 <tr>
@@ -79,7 +79,9 @@
                         <td>
                             <a href="{% url 'blog:detail' pk=post.pk %}" class="">{{ post.created_at }}</a>
                         </td>
-                        <td>{{ post.writer }}</td>
+                        <td>
+                            <a href="{% url 'user:login' %}" class="">{{ user.email }}</a>
+                        </td>
                     </tr>
                 {% endfor %}
             </tbody>
