--- a/templates/index.html
+++ b/templates/index.html
@@ -18,9 +18,11 @@
     <div class="header-click">
       <a href="{% url 'user:login' %}">로그인</a>
       <a href="{% url 'user:register' %}">회원가입</a>
-      <a href="{% url 'user:logout' %}" class="">로그아웃</a>
+      <a href="" class="">로그아웃</a>
     </div>
   </div>
+  {% block contents %}
+  {% endblock contents%}
   <!-- // header -->
 
   <div class="main">
