--- a/templates/index.html
+++ b/templates/index.html
@@ -16,9 +16,9 @@
   <div class="header">
     <h1><a href="index.html">HTML/CSS 실습</a></h1>
     <div class="header-click">
+      <a href="{% url 'user:logout' %}" class="">로그아웃</a>
       <a href="{% url 'user:login' %}">로그인</a>
       <a href="{% url 'user:register' %}">회원가입</a>
-      <a href="" class="">로그아웃</a>
     </div>
   </div>
   {% block contents %}
