--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -80,7 +80,7 @@
                             <a href="{% url 'blog:detail' pk=post.pk %}" class="">{{ post.created_at }}</a>
                         </td>
                         <td>
-                            <a href="{% url 'user:login' %}" class="">{{ user.name }}</a>
+                            <a href="{% url 'user:login' %}" class="">{{ user.user_id }}</a>
                         </td>
                     </tr>
                 {% endfor %}
