7/19 게시글 작성시 summernote양식 사용, login_required 기능추가

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -29,7 +29,7 @@
   <!-- // header -->
 
   <div class="main">
-        <a href="{% url 'blog:list' %}" class="btn btn-outline-success">자유게시판</a>
+        <a href="{% url 'board:board_list' %}" class="btn btn-outline-success">자유게시판</a>
   </div>
 
   <!-- footer -->
