--- a/board/templates/board/board_list.html
+++ b/board/templates/board/board_list.html
@@ -5,4 +5,39 @@
 <div>
     <a href="{% url 'board:board_write' %}"><button>글쓰기</button></a>
 </div>
+
+<div class="board">
+    <div class="normal-board">
+        <p>(일반 게시판)</p>
+        {% for board in normal_boards %}
+        {% if board %}
+        <div>{{ board.title }} / {{ board.writer }} / {{board.write_dttm}}</div>
+        {% endif %}
+        {% endfor %}
+    </div>
+    <div class="question-board">
+        <p>(질문 게시판)</p>
+        {% for board in question_boards %}
+        {% if board %}
+        <div>{{ board.title }} / {{ board.writer }} / {{board.write_dttm}}</div>
+        {% endif %}
+        {% endfor %}
+    </div>
+    <div class="introduce-board">
+        <p>(일반 게시판)</p>
+        {% for board in introduce_boards %}
+        {% if board %}
+        <div>{{ board.title }} / {{ board.writer }} / {{board.write_dttm}}</div>
+        {% endif %}
+        {% endfor %}
+    </div>
+    <div class="recommend-board">
+        <p>(일반 게시판)</p>
+        {% for board in recommend_boards %}
+        {% if board %}
+        <div>{{ board.title }} / {{ board.writer }} / {{board.write_dttm}}</div>
+        {% endif %}
+        {% endfor %}
+    </div>
+</div>
 {% endblock contents %}
