--- a/board/templates/board/board_detail.html
+++ b/board/templates/board/board_detail.html
@@ -4,7 +4,7 @@
 <div>게시판 상세보기</div>
 
 {% if writer %}
-<a href=""><button>수정</button></a>
+<a href="/board/detail/{{ board.id }}/update/"><button>수정</button></a>
 <a href="/board/detail/{{ board.id }}/delete/"><button>삭제</button></a>
 {% endif %}
 
