--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -5,17 +5,20 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>게시판</title>
-  <link rel="stylesheet" href="/static/css/common.css">
-  <link rel="stylesheet" href="/static/css/table.css">
-  <link rel="stylesheet" href="/static/css/list.css">
+  <title>메인</title>
+  <link rel="stylesheet" href="/static/css/index.css">
+  <link rel="stylesheet" href="/static/css/login.css">
+  <!-- CSS only -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
 
 <body>
   <!-- header -->
   <div class="header">
-    <h1><a href="index.html">HTML/CSS 실습</a></h1>
+    <h1><a href="/">Travelers</a></h1>
     <div class="header-click">
+      <a href="/">Home</a>
+      <a href="{% url 'board:board_list' %}">자유게시판</a>
       {% if login_session %}
       <a href="{% url 'user:logout' %}" class="">로그아웃</a>
       {% else %}
@@ -24,12 +27,20 @@
       {% endif %}
     </div>
   </div>
+
+  
   {% block contents %}
   {% endblock contents%}
-  <!-- // header -->
-
   <div class="main">
-        <a href="{% url 'board:board_list' %}" class="btn btn-outline-success">자유게시판</a>
+    <div class = "box-board-introduce">
+      <div class = "introduce-site">
+        <h3>Travelers에 오신것을 환영합니다. 자유롭게 사람들과 여행이야기를 나눠보세요~!</h3>
+        <div class="box-board-free">
+        <a href="{% url 'board:board_list' %}" class="tag-board-free">자유게시판</a>
+    </div>
+      </div>
+    </div>
+    
   </div>
 
   <!-- footer -->
