--- a/user/templates/user/register.html
+++ b/user/templates/user/register.html
@@ -1,7 +1,7 @@
 {% extends 'home/index.html' %}
 
 {% block contents %}
-<div>회원가입<div>
+<div><h1>회원가입</h1><div>
 
 <form action="" method="POST">
     {% csrf_token %}
