--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -8,6 +8,7 @@
   <title>메인</title>
   <link rel="stylesheet" href="/static/css/index.css">
   <link rel="stylesheet" href="/static/css/login.css">
+  <link rel="stylesheet" href="/static/css/main.css">
   <!-- CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
@@ -31,17 +32,7 @@
   
   {% block contents %}
   {% endblock contents%}
-  <div class="main">
-    <div class = "box-board-introduce">
-      <div class = "introduce-site">
-        <h3>Travelers에 오신것을 환영합니다. 자유롭게 사람들과 여행이야기를 나눠보세요~!</h3>
-        <div class="box-board-free">
-        <a href="{% url 'board:board_list' %}" class="tag-board-free">자유게시판</a>
-    </div>
-      </div>
-    </div>
-    
-  </div>
+  
 
   <!-- footer -->
   <p class="footer">Copyright 2023. Chilli All rights reserved.</p>
