7/24 로그인,회원가입폼 css적용

--- a/board/templates/board/board_detail.html
+++ b/board/templates/board/board_detail.html
@@ -9,7 +9,7 @@
 {% endif %}
 
 <div>
-    게시판 종류 : {{ borad.board_name }}
+    게시판 종류 : {{ board.board_name }}
 </div>
 <div>
     작성자 : {{ board.writer }} | 작성일 : {{ board.write_dttm }} | 조회수 : {{ board.hits }}
