7-24 board_detail css적용

--- a/board/templates/board/board_detail.html
+++ b/board/templates/board/board_detail.html
@@ -1,24 +1,24 @@
 {% extends 'home/index.html' %}
 
 {% block contents %}
-<div>게시판 상세보기</div>
 
-{% if writer %}
-<a href="/board/detail/{{ board.id }}/update/"><button>수정</button></a>
-<a href="/board/detail/{{ board.id }}/delete/"><button>삭제</button></a>
-{% endif %}
-
-<div>
-    게시판 종류 : {{ board.board_name }}
-</div>
-<div>
-    작성자 : {{ board.writer }} | 작성일 : {{ board.write_dttm }} | 조회수 : {{ board.hits }}
-</div>
-<div>
-    제목: {{ board.title }}
-</div>
-<div>
-    내용: {{ board.contents|safe }}
+<div class="boarddetail">
+    <div class="detail-category">
+        {{ board.board_name }} 게시판
+    </div>
+    <div class="detail-inform">
+        작성자 : {{ board.writer }} | 작성일 : {{ board.write_dttm }} | 조회수 : {{ board.hits }}
+    </div>
+    <div class="detail-title">
+        {{ board.title }}
+    </div>
+    <div class="detail-content">
+        {{ board.contents|safe }}
+    </div>
+    {% if writer %}
+        <a href="/board/detail/{{ board.id }}/update/"><button>수정</button></a>
+        <a href="/board/detail/{{ board.id }}/delete/"><button>삭제</button></a>
+    {% endif %}
 </div>
 
 {% endblock contents %}
